tests/snapshots/snapshots/tests__snapshots__render_snapshots__snapshot_notification_info.snap
---
source: tests/snapshots/render_snapshots.rs
expression: output
---




        ╭ Success ─────────────────────────────────╮
        │                                          │
        │  Skills loaded                           │
        │                                          │
        │                                          │
        │  Press any key to dismiss                │
        ╰──────────────────────────────────────────╯
