tests/snapshots/snapshots/tests__snapshots__render_snapshots__snapshot_settings_advanced_tab_defaults.snap
---
source: tests/snapshots/render_snapshots.rs
expression: output
---




   ╭ Settings ──────────────────────────────────────────────────────────────╮
   │                                                                        │
   │   Basic  │  Advanced                                                   │
   │                                                                        │
   │ ❯ Custom Model:        (none)  Enter to edit                           │
   │                                                                        │
   │   Base URL:            (default)                                       │
   │                                                                        │
   │   LLM Timeout (s):     600                                             │
   │                                                                        │
   │   Max Input Tokens:    (unset)                                         │
   │                                                                        │
   │   Condenser Max Size:  (unset)                                         │
   │                                                                        │
   │   API Key:   (not set)                                                 │
   │                                                                        │
   │   Memory Condensation: On                                              │
   │                                                                        │
   │  Tab/←→ switch tab  ↑/↓ navigate  Enter select/edit  Esc close & save  │
   ╰────────────────────────────────────────────────────────────────────────╯
