tests/snapshots/snapshots/tests__snapshots__render_snapshots__snapshot_settings_basic_tab.snap
---
source: tests/snapshots/render_snapshots.rs
expression: output
---


   ╭ Settings ──────────────────────────────────────────────────────────────╮
   │                                                                        │
   │   Basic  │  Advanced                                                   │
   │                                                                        │
   │ ❯ Provider:  Anthropic  Enter to select                                │
   │                                                                        │
   │   Model:     claude-sonnet-4-5-20250929                                │
   │                                                                        │
   │   API Key:   sk-a********                                              │
   │                                                                        │
   │                                                                        │
   │                                                                        │
   │                                                                        │
   │                                                                        │
   │                                                                        │
   │                                                                        │
   │                                                                        │
   │                                                                        │
   │  Tab/←→ switch tab  ↑/↓ navigate  Enter select/edit  Esc close & save  │
   ╰────────────────────────────────────────────────────────────────────────╯
