tests/snapshots/snapshots/tests__snapshots__render_snapshots__snapshot_settings_basic_tab_model_selected.snap
---
source: tests/snapshots/render_snapshots.rs
expression: output
---


   ╭ Settings ──────────────────────────────────────────────────────────────╮
   │                                                                        │
   │   Basic  │  Advanced                                                   │
   │                                                                        │
   │   Provider:  Anthropic                                                 │
   │                                                                        │
   │ ❯ Model:     claude-sonnet-4-5-20250929  Enter to select               │
   │                                                                        │
   │   API Key:   sk-a********                                              │
   │                                                                        │
   │                                                                        │
   │                                                                        │
   │                                                                        │
   │                                                                        │
   │                                                                        │
   │                                                                        │
   │                                                                        │
   │                                                                        │
   │  Tab/←→ switch tab  ↑/↓ navigate  Enter select/edit  Esc close & save  │
   ╰────────────────────────────────────────────────────────────────────────╯
