tests/snapshots/snapshots/tests__snapshots__render_snapshots__snapshot_spinner_server_starting_takes_precedence_over_running.snap
---
source: tests/snapshots/render_snapshots.rs
expression: output
---
 ✦  Waking up the coding agent.
