tests/snapshots/snapshots/tests__snapshots__render_snapshots__snapshot_spinner_server_starting_tick_zero.snap
---
source: tests/snapshots/render_snapshots.rs
expression: output
---
 ✦  Waking up the coding agent
