tests/snapshots/snapshots/tests__snapshots__render_snapshots__snapshot_status_bar_high_context.snap
---
source: tests/snapshots/render_snapshots.rs
expression: output
---
Policy:    Always Confirm | ⏱ 0s | anthropic/claude-sonnet-4-5-20250929 | Context: [█████████░] 95% (200k) | ↑ 0 ↓ 0
